k8s/database/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: team-a-database
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
